intro minor changes

--- a/artikulua.tex
+++ b/artikulua.tex
@@ -124,9 +124,9 @@ In the last few years Twitter has become one of the most used social networks, c
 
 In this paper we present a multidisciplinary work that aims to contribute novel insights in social research by using and investigating techniques from Natural Language Processing based on the general background proposed by Bauman and his \emph{liquid society} \cite{bauman2013liquid}. Thus, the objective of this work is to provide a detailed social and demographic-based view of the most important topics and relationships that are formed between Basque Twitter users classified by life stage (young and adult). By ``Basque Twitter users'' we refer to those users that are geolocalized in the area of the Basque Country (cultural) and that write at least the 20\% of their tweets using the Basque language. This analysis will be entirely based on automatically collected tweets from Basque users.
 
-More specifically, the work presented in this paper will consist of the following main steps. First, we will identify the relevant Basque Twitter users. Second, a large corpus of tweets will be extracted using the identified users' timelines. Third, we will classify users in terms of life stage (adult/young) by classifying the writing style of the tweets in their timelines as \emph{formal} or \emph{informal}. This is due to the fact that we do not have metadata information about the users' age, which means that we have to somehow try to infer the life stage based on features about writing style. Five different classification methods will be investigated, including the use of machine learning techniques based on both feature-based and neural network architectures. We will use the classifier with the best results in order to label the large corpus of Basque tweets by their writing style thereby classifying their users as in terms of \emph{young} or \emph{adult}. In the final step, this classification will be used to investigate the most relevant topics among users of Twitter writing in Basque as well as for researching the social relations that emerge between each user type (young or adult). The final result will be a comprehensive sociological picture (automatically obtained) of the most important aspects within the community of Basque users of Twitter.
+More specifically, the work presented in this paper will consist of the following main steps. First, we will identify the relevant Basque Twitter users. Second, a large corpus of tweets will be extracted using the identified users' timelines. Third, we will classify users in terms of life stage (adult/young) by classifying the writing style of the tweets in their timelines as \emph{formal} or \emph{informal}. This is due to the fact that we do not have metadata information about the users' age, which means that we have to somehow try to infer the life stage based on features about writing style. Five different classification methods will be investigated, including the use of machine learning techniques based on both feature-based and neural network architectures. We will use the classifier with the best results in order to label the large corpus of Basque tweets by their writing style thereby classifying their users in terms of \emph{young} or \emph{adult}. In the final step, this classification will be used to investigate the most relevant topics among users of Twitter writing in Basque as well as for researching the social relations that emerge between each user type (young or adult). The final result will be a comprehensive sociological picture (automatically obtained) of the most important aspects within the community of Basque users of Twitter.
 
-The main contributions of this work are the following. First, we collect and publish a corpus of 6M tweets written in Basque and a manually annotated gold-standard of 1000 tweets in terms of the writing style, namely, \emph{formal} or \emph{informal}. Both corpora are made available to facilitate both NLP and social research in Basque\footnote{\url{https://github.com/ixa-ehu/heldugazte-corpus}} a less resource highly-inflected language. Second, we investigate the classification of Basque tweets as \emph{formal} or \emph{informal} using 5 different approaches including novel NLP techniques based on word embeddings, contextual character embeddings and neural networks. We believe that our work is the most comprehensive experimentation for the detection of users' age both in terms of number of users and NLP techniques used. Third, the models of the best system will be made publicly available to facilitate their use and reproducibility of results\footnote{\url{https://github.com/ixa-ehu/ixa-pipe-doc}}. An, interesting insight from this part is the fact that, contrary to common views, the neural approach \cite{akbik2018contextual} obtains very competitive results despite being trained on a very small dataset. We believe that is due mostly to the combination of character-based contextual embeddings with static word embeddings. Fourth, we perform the largest investigation of social relationships in terms of age stages for Basque communities based on an automatically classified corpus of almost 8K users. Finally, we believe that this work shows how to make it possible to do meaningful and large scale social and NLP research for less resource languages using texts from social media. In our view, this work is just the beginning.
+The main contributions of this work are the following. First, we collect and publish a corpus of 6M tweets written in Basque and a manually annotated gold-standard of 1000 tweets in terms of the writing style, namely, \emph{formal} or \emph{informal}. Both corpora are made available to facilitate both NLP and social research in Basque\footnote{\url{https://github.com/ixa-ehu/heldugazte-corpus}}, a less resource highly-inflected language. Second, we investigate the classification of Basque tweets as \emph{formal} or \emph{informal} using 5 different approaches including novel NLP techniques based on word embeddings, contextual character embeddings and neural networks. We believe that our work is the most comprehensive experimentation for the detection of users' age both in terms of number of users and NLP techniques used. Third, the models of the best system will be made publicly available to facilitate their use and reproducibility of results\footnote{\url{https://github.com/ixa-ehu/ixa-pipe-doc}}. An interesting insight from this part is the fact that, contrary to common views, the neural approach \cite{akbik2018contextual} obtains very competitive results despite being trained on a very small dataset. We believe that is due mostly to the combination of character-based contextual embeddings with static word embeddings. Fourth, we perform the largest investigation of social relationships in terms of age stages for Basque communities based on an automatically classified corpus of almost 8K users and 6M tweets. Finally, we believe that this work shows how to make it possible to do meaningful and large scale social and NLP research for less resource languages using texts from social media. In our view, this work is just the beginning.
 
 \section{Related Work}\label{sec:background}
 
@@ -144,11 +144,11 @@ Of particular interest to us is the body of work performed with the objective of
   \centering
   \begin{tabular}{llcr}\hline
     Reference & Corpus size \# users & \# labels & Language \\ \hline \hline
-    Rao et al. (2010) & 1000 erabiltzaile & 2 & en \\
-    Al Zamal et al. (2012) & 400 erabiltzaile & 2 & en \\
-    Marquart et al. (2014) & 306 erabiltzaile & 5 & es \\
-    Nguyen et al. (2013) & 3110 erabiltzaile & 3 & nl \\
-    Morgan-Lopez et al. (2017) & 3184 erabiltzaile & 3 & en \\ \hline
+    Rao et al. (2010) & 1000 & 2 & en \\
+    Al Zamal et al. (2012) & 400 & 2 & en \\
+    Marquart et al. (2014) & 306 & 5 & es \\
+    Nguyen et al. (2013) & 3110 & 3 & nl \\
+    Morgan-Lopez et al. (2017) & 3184 & 3 & en \\ \hline
   \end{tabular}
   \caption{Most relevant systems for age detection in Twitter.}
   \label{tab:arte ezaug}
