Updates from Overleaf

--- a/artikulua.tex
+++ b/artikulua.tex
@@ -696,22 +696,13 @@ To finish this section, Table \ref{tab:taldeak} offers an overview of the main s
 
 \section{Conclusion and Future Work}\label{sec:conclusion}
 
-We have shown how to develop different systems that allows us an approximation to the reality of certain communities of Twitter, in this case to the community of Basque speakers. The first step has allowed the collection of large amounts of information based on the target community. The second step has allowed the segmentation of the extracted sample by life stage, demonstrating that it is possible to segment by demographic features. In third and last place, we can show the topics of conversation and the relationships of young and adults, showing the reality of two different groups. In general terms, it is proved that the combination of social science and computing science is enriching thanks to the application of Language Processing techniques, demonstrating that demographic features can be inferred and that social interactions can be discovered.
+We have shown how to develop different systems that allows us an approximation to the reality of certain communities of Twitter, in this case to the community of Basque speakers. The first step has allowed the collection of large amounts of information based on the target community. The second step has allowed the segmentation of the extracted sample by life stage, demonstrating that it is possible to segment by demographic features. In third and last place, we can show the topics of conversation and the relationships of young and adults, showing the reality of two different groups. In general terms, it is proven that the social sciences and computer science make a good combination thanks to the application of language processing techniques,, demonstrating that demographic features can be inferred and that social interactions can be discovered.
 
 It can be said that a new data source has been opened thanks to the possibility of extracting information from Twitter. This extraction technique has allowed to achieve large amounts of data at a very low cost. It would be interesting to extend the extraction of data to other social networks such as Instagram and Facebook, which due to their closure make it very difficult to extract their data. However, this new source of data also has its limits in research, since it leaves out, at least for now, a part of the population. Even so, it must be admitted that a successful system has been developed, getting more than 10 million tweets in Basque from almost 8,000 different users, a considerable amount of data dealing with a minority language. An important part of this research is based on the segmentation between young people and adults, since the prediction of demographic characteristics is an important tool for social research. The distinction between youth and adults is not based on age, it has been done according to the formality of the text, since age-based labeling was too expensive. Therefore, given the difficulties of age labeling, it is decided to use a methodological shortcut, if the concentration of informal text is high, the author will be considered as young. For the future, it would be appropriate to carry out the classification by age, investing more resources but making a more real approach. Thanks to the document classifier of IXA pipes, good results have been achieved, demonstrating that it is a robust system that works well with small training corpus, making it possible for small researchers to do their job well.
 
-Behin gazte eta helduen taldeak ezberdinduta daudelarik, hauen gai ohikoenak zeintzuk diren azaleratu eta hauen harremantzeko modua zein den argitu da hein batean. 
+Once the entire sample has been segmented between young people and adults, it has been possible to show the topics of which they speak and how do they interact. First of all, what Basque users speak about has been shown. Most young people use this social network to communicate with nearby people about everyday events. On the other hand, among adults it would function more as an instrument of expression, especially when it comes to publishing topics that are political or current in nature. Despite the different themes of adults and young people, this social network is used mainly as a means of communication and information exchange. Second, we have been able to identify the different subgroups within the same community, using the interactions or retweets. In addition, it is worth mentioning that users related to the media play an important role, confirming the informative nature of Twitter. Basque users use Basque, especially to talk about events or topics related to them. It can be said that the communities are easily identifiable and can be related to the context of the Basque Country, showing that the approach is useful. It can be concluded by saying that Basque is used mainly to talk about the subjects of the Basque people.
 
-Once the entire sample has been segmented between young people and adults, it has been possible to show the topics of which they speak and how do they interact.
-
-Lehenik eta behin, euskal erabiltzaileek ze gairi buruz aritzen diren argituko da, horretarako txio pertsonalen testuetan LDA teknika aplikatzean oinarritu garelarik. Gazteek gehienbat, beren gertukoekin komunikatzeko erabiltzen dute sare sozial hau, egunerokotasuneko gertakariak adieraziz. Helduen artean ostera, mezuak gizarteratzeko lanabes modura kontsideratzen dela ikusi daiteke, batez ere izaera politikoa daukaten gaiak plazaratzeko, gizartean pil-pilean dauden gaiei buruz arituz. Gazte eta helduen tematikak ezberdinak izan arren, komunikatzeko eta informazio-trukerako lanabes moduan erabilia da sare sozial hau. 
-
-
-
-Bigarrenik, harremanak nola ematen diren azaleratu da, horretarako euskarazko birtxioetan oinarrituta harreman sare bat sortu delarik. Honez gain, aipatu beharra dago, komunikabideekin erlazionatutako erabiltzaileek garrantzizko papera jokatzen dutela, Twitterren izaera informatiboa konfirmatzen delarik. Erabiltzaile euskaldunek euskara erabiltzen dute, batez ere, beren inguruko gertakari edo gaien inguruan hitz egiteko, gaien arabera ere harreman-taldeak sortuz. Harremanak komunitate konkretuen baitan ematen da eta Euskal Herriko testuinguruarekin erlazionatuta daudela esan daiteke. Ondorioztatu daiteke, euskara, euskaldunen gaiei buruz hitz egiteko erabiltzen dela gehienbat.
-
-
-Thanks to this work, it has been possible to discover how Basque language is adapting to the context of the 21st century, demonstrating that it is present in social networks, with more than 6 million tweets in Basque and almost 8,000 different users crawled. Being present in new technologies such as social networks means that our language is able to adapt to new challenges, thanks to the creativity of the Basques to introduce them into these spaces. As the result of this research, it can be said that Basque speakers use Basque language to speak about their own issues, showing that Basque language is capable of adapting to new contexts, always being linked to the everyday reality of the community of speakers. This shows, in this globalized and constantly connected world, that the Basques have a special ability to find their place and settle down.
+Thanks to this work, it has been possible to discover how Basque language is adapting to the context of the 21st century, demonstrating that it is present in social networks, with more than 6 million tweets in Basque and almost 8,000 different users crawled. Being present in new technologies, such as social networks, means that our language is able to adapt to new challenges, thanks to the creativity of the Basques to introduce them into these spaces. As the result of this research, it can be said that Basque speakers use Basque language to speak about their own issues, showing that Basque language is capable of adapting to new contexts, always being linked to the everyday reality of the community of speakers. This shows, in this globalized and constantly connected world, that the Basques have a special ability to find their place and settle down.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \vspace{6pt}
@@ -769,7 +760,7 @@ Thanks to this work, it has been possible to discover how Basque language is ada
 %=====================================
 \reftitle{References}
 \externalbibliography{yes}
-\bibliography{biblio,/home/ragerri/references/references}
+\bibliography{biblio,references}
 
 
 %\begin{thebibliography}{999}
